fixed the optimistic update issue, fixed avatar of comment form do not match with user's profile, fixed minor issue of avtar shrinked, fixed width of content when it supposed to wrap but stayed in oneline and leak the container width by setting display: inline-block, display:block will have the width extend beyond max-width

--- a/components/activity/comment/comment-component.module.css
+++ b/components/activity/comment/comment-component.module.css
@@ -10,7 +10,7 @@
 }
 .content-group__content{
     @apply bg-slate-200/90 border border-slate-400  backdrop-blur  py-2 px-4 my-1 rounded-3xl;
-    width: max-content;
+    display: inline-block;
     max-width: 100%;
     white-space: pre-line;
     color: var(--primary-color)
