--- a/components/activity/mini-avatar/mini-avatar.module.css
+++ b/components/activity/mini-avatar/mini-avatar.module.css
@@ -1,5 +1,5 @@
 .mini-avatar{
-    @apply rounded overflow-hidden mr-4 z-10;
+    @apply rounded overflow-hidden mr-4 z-10 shrink-0;
     img{
         @apply w-full h-full;
     }
